--- a/package.json
+++ b/package.json
@@ -31,16 +31,15 @@
   "homepage": "https://github.com/DanielJDufour/read-png#readme",
   "devDependencies": {
     "ava": "^3.14.0",
-    "browserify": "^17.0.0",
     "cpy-cli": "^3.1.1",
     "http-server": "^0.12.3",
     "mkdirp": "^1.0.4",
-    "pngjs": "^6.0.0",
     "rimraf": "^3.0.2",
-    "terser": "^5.5.1",
-    "toab": "^2.2.0"
+    "terser": "^5.5.1"
   },
   "dependencies": {
-    "read-pixels": "^0.2.1"
+    "pngjs": "^6.0.0",
+    "read-pixels": "^0.2.1",
+    "toab": "^2.2.0"
   }
 }
